----------------------------------------------------------------------
 OmegaT 3.0.4 update 1
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
3.0.4 update 1 vs. 3.0.4

 Other enhancements:

  - Plugin loading is now logged, to help troubleshoot issues

  Bug fixes: 

  - Virtual config folder path listed instead of real one under Windows Vista/7
  https://sourceforge.net/p/omegat/bugs/601/

----------------------------------------------------------------------
 OmegaT 3.0.4
----------------------------------------------------------------------
  10 Enhancements
   6 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.0.4 vs. 3.0.3

  Implemented requests:

  - Add support for monolingual .po files 
  https://sourceforge.net/p/omegat/feature-requests/865/

  - Allow 12 scripts in the Tools menu
  https://sourceforge.net/p/omegat/feature-requests/843/

  - Add support for for creationid and creationdate in TMX
  https://sourceforge.net/p/omegat/feature-requests/744/

  - Exactly equal suggestions from diferents tmx show only as one
  https://sourceforge.net/p/omegat/feature-requests/874/

  - Print non-string data types with console.print() and println() 
  https://sourceforge.net/p/omegat/feature-requests/875/

  - Sorted list of scripts 
  https://sourceforge.net/p/omegat/feature-requests/878/

  - Default shortcut for "Insert next Missing Tag" 
  https://sourceforge.net/p/omegat/feature-requests/856/

 Other enhancements:

  - Linux: Zenity is not needed anymore in omegat.kaptn to display 
OmegaT's version, and several typos were corrected

  - The "check-rules" script now has a GUI

  - There is a new global spell checking script

  Bug fixes: 

  - Scripts folder is not created in Windows packages  
  https://sourceforge.net/p/omegat/bugs/595/
