@@ -2,7 +2,7 @@
  OmegaT 3.0.4 update 1
 ----------------------------------------------------------------------
    1 Enhancement
-   1 Bug fix
+   2 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
 3.0.4 update 1 vs. 3.0.4
@@ -15,6 +15,9 @@
 
   - Virtual config folder path listed instead of real one under Windows Vista/7
   https://sourceforge.net/p/omegat/bugs/601/
+
+  - HTML filter: submit and button input values were translated even
+  when not configured to do so
 
 ----------------------------------------------------------------------
  OmegaT 3.0.4
